More updates to get closer to having the corba binding working
git-svn-id: https://svn.apache.org/repos/asf/incubator/cxf/trunk@610221 13f79535-47bb-0310-9956-ffa450edef68